--- a/VirtualWorld.csproj
+++ b/VirtualWorld.csproj
@@ -198,18 +198,6 @@
       <DependentUpon>ProgressForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SubForm\LineList.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SubForm\LineList.Designer.cs">
-      <DependentUpon>LineList.cs</DependentUpon>
-    </Compile>
-    <Compile Include="SubForm\ImgEdit.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SubForm\ImgEdit.Designer.cs">
-      <DependentUpon>ImgEdit.cs</DependentUpon>
-    </Compile>
     <Compile Include="SubForm\LineProperties.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -247,6 +235,7 @@
       <DependentUpon>TransectForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ThumbnailHelper.cs" />
+    <Compile Include="Utils\DBOperation.cs" />
     <Compile Include="Utils\DevExpressLocalizerHelper.cs" />
     <Compile Include="Utils\Markers.cs" />
     <Compile Include="Utils\Menu.cs" />
@@ -291,12 +280,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="SubForm\LineList.resx">
-      <DependentUpon>LineList.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SubForm\ImgEdit.resx">
-      <DependentUpon>ImgEdit.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="SubForm\LineProperties.resx">
       <DependentUpon>LineProperties.cs</DependentUpon>
     </EmbeddedResource>
