--- a/VirtualWorld.csproj
+++ b/VirtualWorld.csproj
@@ -198,6 +198,12 @@
       <DependentUpon>ProgressForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SplashScreen1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SplashScreen1.Designer.cs">
+      <DependentUpon>SplashScreen1.cs</DependentUpon>
+    </Compile>
     <Compile Include="SubForm\LineProperties.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -281,6 +287,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SplashScreen1.resx">
+      <DependentUpon>SplashScreen1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SubForm\LineProperties.resx">
       <DependentUpon>LineProperties.cs</DependentUpon>
     </EmbeddedResource>
