--- a/VirtualWorld.csproj
+++ b/VirtualWorld.csproj
@@ -46,6 +46,10 @@
     <StartupObject>HRQ.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Accessibility" />
+    <Reference Include="ColorHatch">
+      <HintPath>..\绘图程序\绘图程序\bin\Debug\ColorHatch.dll</HintPath>
+    </Reference>
     <Reference Include="DevExpress.BonusSkins.v15.1">
       <HintPath>
       </HintPath>
@@ -68,6 +72,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="DevExpress.RichEdit.v15.1.Core, Version=15.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Sparkline.v15.1.Core, Version=15.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Tutorials.v15.1, Version=15.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Utils.v15.1">
       <HintPath>
@@ -121,10 +126,12 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data">
       <Private>False</Private>
     </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Data.SQLite, Version=1.0.99.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>packages\System.Data.SQLite.Core.1.0.99.0\lib\net40\System.Data.SQLite.dll</HintPath>
@@ -146,12 +153,17 @@
     <Reference Include="System.Drawing">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
+    <Reference Include="System.Security" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Windows.Forms">
       <Private>False</Private>
     </Reference>
     <Reference Include="System.Xml">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainForm.cs">
@@ -165,6 +177,18 @@
     </Compile>
     <Compile Include="Modules\ChartGrid.Designer.cs">
       <DependentUpon>ChartGrid.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\PaintControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Modules\PaintControl.Designer.cs">
+      <DependentUpon>PaintControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\PicControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Modules\PicControl.Designer.cs">
+      <DependentUpon>PicControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Modules\ReportGrid.cs">
       <SubType>UserControl</SubType>
@@ -234,6 +258,12 @@
     <Compile Include="SubForm\ReportForm.Designer.cs">
       <DependentUpon>ReportForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="SubForm\SettingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SubForm\SettingForm.Designer.cs">
+      <DependentUpon>SettingForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SubForm\TerraAnalysis.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -247,8 +277,10 @@
       <DependentUpon>TransectForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ThumbnailHelper.cs" />
+    <Compile Include="Utils\App.cs" />
     <Compile Include="Utils\DBOperation.cs" />
     <Compile Include="Utils\DevExpressLocalizerHelper.cs" />
+    <Compile Include="Utils\DrawTools.cs" />
     <Compile Include="Utils\Markers.cs" />
     <Compile Include="Utils\Menu.cs" />
     <Compile Include="Utils\Report.cs" />
@@ -264,6 +296,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Modules\ChartGrid.resx">
       <DependentUpon>ChartGrid.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\PaintControl.resx">
+      <DependentUpon>PaintControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\PicControl.resx">
+      <DependentUpon>PicControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Modules\ReportGrid.resx">
       <DependentUpon>ReportGrid.cs</DependentUpon>
@@ -311,6 +349,9 @@
     <EmbeddedResource Include="SubForm\ReportForm.resx">
       <DependentUpon>ReportForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="SubForm\SettingForm.resx">
+      <DependentUpon>SettingForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SubForm\TerraAnalysis.resx">
       <DependentUpon>TerraAnalysis.cs</DependentUpon>
     </EmbeddedResource>
@@ -330,6 +371,20 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\arrowleft24.png" />
+    <None Include="Resources\arrowright24.png" />
+    <None Include="Resources\zoomin24.png" />
+    <None Include="Resources\zoomout24.png" />
+    <None Include="Resources\stopzoom.png" />
+    <None Include="Resources\rect.gif" />
+    <None Include="Resources\Pencil.gif" />
+    <None Include="Resources\line.gif" />
+    <None Include="Resources\Fillrect.GIF" />
+    <None Include="Resources\FillCircle.GIF" />
+    <None Include="Resources\eraser.png" />
+    <None Include="Resources\Circle.gif" />
+    <None Include="Resources\arrow16.png" />
+    <None Include="Resources\arrow_down.png" />
     <None Include="captureimagetool\icons\accept.ico" />
     <None Include="captureimagetool\icons\arrow.ico" />
     <None Include="captureimagetool\icons\ellipse.ico" />
